--- a/bridge/static/index.html
+++ b/bridge/static/index.html
@@ -163,11 +163,13 @@ input,select{font-family:inherit}
 .charts-wrap{display:grid;grid-template-columns:1fr;gap:12px}
 .chart-row{display:grid;grid-template-columns:1fr 1fr;gap:12px}
 @media(max-width:700px){.chart-row{grid-template-columns:1fr}}
-.chart-card{background:var(--surface);border:1px solid var(--border);border-radius:var(--radius);padding:12px 16px}
+.chart-card{background:var(--surface);border:1px solid var(--border);border-radius:var(--radius);padding:12px 16px;overflow:visible}
 .chart-card.wide{grid-column:1/-1}
 .chart-label{font-size:11px;font-weight:600;color:var(--text-3);text-transform:uppercase;letter-spacing:.5px;margin-bottom:8px}
-.chart-card canvas{width:100%;height:120px;display:block}
-.chart-card.wide canvas{height:160px}
+.chart-card canvas{width:100%;display:block}
+#chart-power{height:250px}
+#chart-voltage,#chart-current{height:200px}
+.chart-row .chart-card{min-height:240px}
 .chart-controls{display:flex;align-items:center;gap:8px;flex-wrap:wrap}
 .range-btn{padding:4px 12px;border:1px solid var(--border);border-radius:4px;background:transparent;
   color:var(--text-2);font-size:11px;font-weight:600;transition:all .15s;cursor:pointer}
